[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/Big_background elements/Box.png" type="Texture" id=1]
[ext_resource path="res://Entities/Objects/Pushables/KickCube.gd" type="Script" id=2]
[ext_resource path="res://sfx/STONE_part1_loopable.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/STONE_part2_loopable.wav" type="AudioStream" id=4]

[node name="PushBlock" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="Cube-white" type="Sprite" parent="."]
position = Vector2( 1, -3 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 1 )
offset = Vector2( -10, -110 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -32, 0, 0, 16, 32, 0, 0, -16 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ClickArea"]
visible = false
polygon = PoolVector2Array( 0, -48, 32, -32, 32, 0, 0, 16, -32, 0, -32, -32 )

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 4

[node name="Arrow" type="Polygon2D" parent="."]
visible = false
position = Vector2( 0, -32 )
color = Color( 0.231373, 0.231373, 0.231373, 1 )
polygon = PoolVector2Array( -11, -4, 4, -4, 4, -9, 11, 0, 4, 8, 4, 4, -11, 4 )

[node name="PlayerArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerArea"]
polygon = PoolVector2Array( 0, 8, 11, 35, 59, 11, 16, 0, 59, -10, 14, -35, 0, -8, -11, -36, -59, -10, -16, 0, -59, 10, -15, 34 )

[node name="Audio" type="Node2D" parent="."]

[node name="Grind" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 3 )

[node name="Rattle" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 4 )

[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
